Add Order model

--- a/notebooks/functions.ipynb
+++ b/notebooks/functions.ipynb
@@ -31,16 +31,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c536a69",
+   "id": "fa7c8dd2",
    "metadata": {},
    "source": [
-    "## Natural language query to Search filters"
+    "## Natural language query to search filters (DSL)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "c0779d74",
+   "id": "287c35e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "86582100",
+   "id": "bcbcc5be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "6c4feca7",
+   "id": "9f968a32",
    "metadata": {},
    "outputs": [
     {
@@ -182,31 +182,294 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "773620c6",
+   "id": "0083c3e3",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "a35e7573",
+   "id": "d7940516",
    "metadata": {},
    "source": [
-    "## Chatbot actions\n",
+    "## Chatbot performing actions\n",
     "\n",
-    "Sample chatbot created using openai functions. Chatbot works for an ecommerce app and helps customers solve order issues. \n",
+    "Sample chatbot created using openai functions. Chatbot works for an ecommerce app and helps customers solve order issues by performing actions, and also does retrieval.\n",
+    "\n",
     "It answers queries like:\n",
     "\n",
-    "- Where is my order?\n",
-    "- My delivered order has defects. I would like an exchange.\n",
+    "### Scenario 1\n",
+    "\n",
+    "- Where is my order? (without order_id)\n",
     "- Cancel my order\n",
-    "- List delivered orders. show details for order#2"
+    "\n",
+    "### Scenario 2\n",
+    "\n",
+    "- My delivered order has defects\n",
+    "- I would like an exchange/return\n",
+    "\n",
+    "### Scenario 3\n",
+    "\n",
+    "- (order_id in chat history)\n",
+    "- I need order invoice\n",
+    "- Here's how to get order invoice... (retrieval from docs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d24671a9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57178baf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "603b353f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "system_prompt = \"\"\"You are an AI assistant for an ecommerce app helping customers with their queries about their orders.\n",
+    "If customer's query requires an order id but none is present in messages then list orders and ask them to select their order.\n",
+    "\"\"\"\n",
+    "\n",
+    "functions = [\n",
+    "    {\n",
+    "        \"name\": \"get_order_details\",\n",
+    "        \"description\": \"Get order details like name, status, order datetime of an order id. If status is OUT_FOR_DELIVERY order's current location and ETA is also returned.\",\n",
+    "        \"parameters\": {\n",
+    "            \"type\": \"object\",\n",
+    "            \"properties\": {\n",
+    "                \"order_id\": {\n",
+    "                    \"type\": \"string\",\n",
+    "                    \"description\": \"The Order ID to track.\"\n",
+    "                }\n",
+    "            }\n",
+    "        },\n",
+    "        \"result\": {\n",
+    "            \"type\": \"object\",\n",
+    "            \"properties\": {\n",
+    "                \"id\": {\n",
+    "                    \"type\": \"string\",\n",
+    "                    \"description\": \"Order ID.\"\n",
+    "                },\n",
+    "                \"name\": {\n",
+    "                    \"type\": \"string\",\n",
+    "                    \"description\": \"Ordered item's name.\"\n",
+    "                },\n",
+    "                \"status\": {\n",
+    "                    \"type\": \"string\",\n",
+    "                    \"description\": \"Ordered item's name.\"\n",
+    "                },\n",
+    "                \"\": {\n",
+    "                    \"type\": \"string\",\n",
+    "                    \"description\": \"Ordered item's name.\"\n",
+    "                },\n",
+    "                \"current_location\": {\n",
+    "                    \"type\": \"string\",\n",
+    "                    \"description\": \"Current location of OUT_FOR_DELIVERY order.\"\n",
+    "                },\n",
+    "                \"delivery_eta\": {\n",
+    "                    \"type\": \"string\",\n",
+    "                    \"description\": \"Estimated time of arrival of OUT_FOR_DELIVERY order.\"\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "6c2c7e60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime\n",
+    "from enum import Enum\n",
+    "from typing import Dict, Any, Optional\n",
+    "\n",
+    "from pydantic import BaseModel, Field, TypeAdapter\n",
+    "from pydantic.dataclasses import dataclass\n",
+    "\n",
+    "\n",
+    "class OrderStatus(str, Enum):\n",
+    "    PLACED = \"PLACED\"\n",
+    "    OUT_FOR_DELIVERY = \"OUT_FOR_DELIVERY\"\n",
+    "    DELIVERED = \"DELIVERED\"\n",
+    "    CANCELED = \"CANCELED\"\n",
+    "\n",
+    "\n",
+    "class Order(BaseModel):\n",
+    "    \"\"\"Order details.\"\"\"\n",
+    "    id: int = Field(description=\"Order ID.\")\n",
+    "    name: str = Field(description=\"Ordered item's name.\")\n",
+    "    status: OrderStatus = Field(description=\"Order status.\")\n",
+    "    date: datetime = Field(description=\"Order date.\")\n",
+    "    current_location: str = Field(description=\"OUT_FOR_DELIVERY order's current location.\", default=\"\")\n",
+    "    delivery_eta: datetime = Field(description=\"OUT_FOR_DELIVERY order's delivery estimated time of arrival.\", default=\"\")\n",
+    "        \n",
+    "    class Config:\n",
+    "        @staticmethod\n",
+    "        def json_schema_extra(schema: Dict[str, Any]) -> None:\n",
+    "            schema.pop(\"required\", None)\n",
+    "            for name, prop in schema.get(\"properties\", {}).items():\n",
+    "                prop.pop(\"title\", None)\n",
+    "                if name == \"date\":\n",
+    "                    prop.pop(\"format\", None)\n",
+    "                elif name == \"status\":\n",
+    "                    prop.pop(\"allOf\", None)\n",
+    "                    prop[\"enum\"] = list(OrderStatus)\n",
+    "                    \n",
+    "    def csv(self):\n",
+    "        return f\"{self.id},{self.name},{self.status},{self.date},{self.current_location},{self.delivery_eta}\"\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def csv_header(cls):\n",
+    "        return \",\".join(list(cls.model_fields.keys()))\n",
+    "\n",
+    "import json\n",
+    "# print(json.dumps(Order.model_json_schema(), indent=2))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "26518a7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "id,name,status,date,current_location,delivery_eta\n",
+      "124,Nike running shoes,OUT_FOR_DELIVERY,2023-09-11 00:00:00,Indiranagar,2023-09-13 00:00:00\n",
+      "123,Beige blanket,DELIVERED,2023-01-01 00:00:00,,\n",
+      "122,IKEA Table lamp,CANCELED,2022-02-28 00:00:00,,\n",
+      "121,Bullet proof socks,DELIVERED,2022-01-01 00:00:00,,\n",
+      "\n",
+      "id,name,status,date,current_location,delivery_eta\n",
+      "124,Nike running shoes,OUT_FOR_DELIVERY,2023-09-11 00:00:00,Indiranagar,2023-09-13 00:00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "class OrderAPI:\n",
+    "    def __init__(self):\n",
+    "        self.orders = [\n",
+    "            Order(id=124, name=\"Nike running shoes\", status=OrderStatus.OUT_FOR_DELIVERY, date=datetime.strptime(\"9/11/2023\", \"%m/%d/%Y\"), current_location=\"Indiranagar\", delivery_eta=datetime.strptime(\"9/13/2023\", \"%m/%d/%Y\")),\n",
+    "            Order(id=123, name=\"Beige blanket\", status=OrderStatus.DELIVERED, date=datetime.strptime(\"1/1/2023\", \"%m/%d/%Y\")),\n",
+    "            Order(id=122, name=\"IKEA Table lamp\", status=OrderStatus.CANCELED, date=datetime.strptime(\"2/28/2022\", \"%m/%d/%Y\")),\n",
+    "            Order(id=121, name=\"Bullet proof socks\", status=OrderStatus.DELIVERED, date=datetime.strptime(\"1/1/2022\", \"%m/%d/%Y\")),\n",
+    "        ]\n",
+    "        \n",
+    "    def list_orders(self, **kwargs):\n",
+    "        orders_csv = [Order.csv_header()]\n",
+    "        for order in self.orders:\n",
+    "            orders_csv.append(order.csv())\n",
+    "        return \"\\n\".join(orders_csv)\n",
+    "    \n",
+    "    def get_order_details(self, **kwargs):\n",
+    "        order_id = kwargs[\"order_id\"]\n",
+    "        order = [o for o in self.orders if o.id == order_id][0]\n",
+    "        return Order.csv_header() + \"\\n\" + order.csv()\n",
+    "\n",
+    "\n",
+    "order_api = OrderAPI()\n",
+    "print(order_api.list_orders())\n",
+    "print()\n",
+    "print(order_api.get_order_details(order_id=124))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c787c39e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Auto generate functions array from OrderAPI()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d9e434c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def simulate_conversation(chat_history):\n",
+    "    response = openai.ChatCompletion.create(\n",
+    "        model=\"gpt-4\",\n",
+    "        engine=\"gpt-4\",\n",
+    "        messages=[\n",
+    "            {\"role\": \"system\", \"content\": system_prompt},\n",
+    "            *chat_history,\n",
+    "        ],\n",
+    "        temperature=0,\n",
+    "        functions=functions,\n",
+    "    )\n",
+    "    response_message = response.choices[0].message\n",
+    "    if \"function_call\" in response_message:\n",
+    "        func = response_message[\"function_call\"][\"name\"]\n",
+    "        ar = json.loads(response_message[\"function_call\"][\"arguments\"])\n",
+    "    \n",
+    "    chat_history.append({\n",
+    "        \"role\": response_message[\"role\"],\n",
+    "        \"function_call\": {\n",
+    "            \"name\": response_message[\"function_call\"][\"name\"],\n",
+    "            \"arguments\": response_message[\"function_call\"][\"arguments\"],\n",
+    "        },\n",
+    "        \"content\": None\n",
+    "    })\n",
+    "    chat_history.append({\n",
+    "        \"role\": \"function\",\n",
+    "        \"name\": response_message[\"function_call\"][\"name\"],\n",
+    "        \"content\": \"List of 10 shoes with that description\",\n",
+    "    })\n",
+    "\n",
+    "    \n",
+    "    return chat_history"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "05173b54",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ba8cc0c4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "1b5698e1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "7e4752f1",
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +484,7 @@
     }
    ],
    "source": [
-    "\"\"\"\n",
+    " \"\"\"\n",
     "You are a sophisticated AI assistant, a specialist in user intent detection and interpretation.\n",
     "Your task is to perceive and respond to the user's needs, even when they're expressed in an indirect or direct manner.\n",
     "You excel in recognizing subtle cues: for example, if a user states they are 'hungry', you should assume they are seeking nearby dining options such as a restaurant or a cafe.\n",
@@ -234,7 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "57178baf",
+   "id": "f3b5ffac",
    "metadata": {},
    "outputs": [
     {
@@ -277,103 +540,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "603b353f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "functions = [\n",
-    "    {\n",
-    "        \"name\": \"track_order\",\n",
-    "        \"description\": \"Track the progress of the order. Where's the order currently and ETA for delivery.\",\n",
-    "        \"parameters\": {\n",
-    "            \"type\": \"object\",\n",
-    "            \"properties\": {\n",
-    "                \"order_id\": {\n",
-    "                    \"type\": \"string\",\n",
-    "                    \"description\": \"The Order ID.\"\n",
-    "                }\n",
-    "            }\n",
-    "        },\n",
-    "        \"result\": {\n",
-    "            \"type\": \"object\",\n",
-    "            \"properties\": {\n",
-    "                \"location\": {\n",
-    "                    \"type\": \"string\",\n",
-    "                    \"description\": \"Current location of the order.\"\n",
-    "                },\n",
-    "                \"eta\": {\n",
-    "                    \"type\": \"string\",\n",
-    "                    \"description\": \"Estimated time of arrival.\"\n",
-    "                }\n",
-    "            }\n",
-    "        }\n",
-    "    }\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "d9e434c2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "order_id = \"order_1234\"\n",
-    "user_input = \"where is my order?\"\n",
-    "\n",
-    "system_prompt = \"\"\"You are an AI assistant helping customers with their queries about orders for an ecommerce app.\n",
-    "\n",
-    "\"\"\"\n",
-    "\n",
-    "response = openai.ChatCompletion.create(\n",
-    "    model=\"gpt-4\",\n",
-    "    engine=\"gpt-4\",\n",
-    "    messages=[\n",
-    "        {\n",
-    "            \"role\": \"system\",\n",
-    "            \"content\": f\"\"\n",
-    "        },\n",
-    "        {\"role\": \"user\", \"content\": user_input}\n",
-    "    ],\n",
-    "    temperature=0,\n",
-    "    functions=functions,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "05173b54",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "ba8cc0c4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "1b5698e1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "7e4752f1",
+   "id": "58ee0e1a",
    "metadata": {},
    "outputs": [],
-   "source": [
-    " "
-   ]
+   "source": []
   }
  ],
  "metadata": {
