--- a/notebooks/functions.ipynb
+++ b/notebooks/functions.ipynb
@@ -192,16 +192,10 @@
    "id": "d7940516",
    "metadata": {},
    "source": [
-    "## Chatbot performing actions\n",
+    "## Chatbot performing API actions\n",
     "\n",
-    "Sample chatbot created using openai functions. Chatbot works for an ecommerce app and helps customers solve order issues by performing actions, and also does retrieval.\n",
+    "Sample chatbot created using openai functions. Chatbot works for an ecommerce app and helps customers solve order issues by performing actions by calling APIs. It also does retrieval.\n",
     "\n",
-    "It answers queries like:\n",
-    "\n",
-    "### Scenario 1\n",
-    "\n",
-    "- Where is my order? (without order_id)\n",
-    "- Cancel my order\n",
     "\n",
     "### Scenario 2\n",
     "\n",
@@ -217,193 +211,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d24671a9",
+   "execution_count": 143,
+   "id": "56b17829",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from importlib import reload\n",
+    "import functions_code\n",
+    "reload(functions_code)\n",
+    "\n",
+    "order_api = functions_code.OrderAPI()\n",
+    "functions = order_api.get_functions()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "57178baf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "603b353f",
+   "execution_count": 138,
+   "id": "dad3ec1b",
    "metadata": {},
    "outputs": [],
    "source": [
     "system_prompt = \"\"\"You are an AI assistant for an ecommerce app helping customers with their queries about their orders.\n",
     "If customer's query requires an order id but none is present in messages then list orders and ask them to select their order.\n",
-    "\"\"\"\n",
-    "\n",
-    "functions = [\n",
-    "    {\n",
-    "        \"name\": \"get_order_details\",\n",
-    "        \"description\": \"Get order details like name, status, order datetime of an order id. If status is OUT_FOR_DELIVERY order's current location and ETA is also returned.\",\n",
-    "        \"parameters\": {\n",
-    "            \"type\": \"object\",\n",
-    "            \"properties\": {\n",
-    "                \"order_id\": {\n",
-    "                    \"type\": \"string\",\n",
-    "                    \"description\": \"The Order ID to track.\"\n",
-    "                }\n",
-    "            }\n",
-    "        },\n",
-    "        \"result\": {\n",
-    "            \"type\": \"object\",\n",
-    "            \"properties\": {\n",
-    "                \"id\": {\n",
-    "                    \"type\": \"string\",\n",
-    "                    \"description\": \"Order ID.\"\n",
-    "                },\n",
-    "                \"name\": {\n",
-    "                    \"type\": \"string\",\n",
-    "                    \"description\": \"Ordered item's name.\"\n",
-    "                },\n",
-    "                \"status\": {\n",
-    "                    \"type\": \"string\",\n",
-    "                    \"description\": \"Ordered item's name.\"\n",
-    "                },\n",
-    "                \"\": {\n",
-    "                    \"type\": \"string\",\n",
-    "                    \"description\": \"Ordered item's name.\"\n",
-    "                },\n",
-    "                \"current_location\": {\n",
-    "                    \"type\": \"string\",\n",
-    "                    \"description\": \"Current location of OUT_FOR_DELIVERY order.\"\n",
-    "                },\n",
-    "                \"delivery_eta\": {\n",
-    "                    \"type\": \"string\",\n",
-    "                    \"description\": \"Estimated time of arrival of OUT_FOR_DELIVERY order.\"\n",
-    "                }\n",
-    "            }\n",
-    "        }\n",
-    "    }\n",
-    "]"
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "id": "6c2c7e60",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from datetime import datetime\n",
-    "from enum import Enum\n",
-    "from typing import Dict, Any, Optional\n",
-    "\n",
-    "from pydantic import BaseModel, Field, TypeAdapter\n",
-    "from pydantic.dataclasses import dataclass\n",
-    "\n",
-    "\n",
-    "class OrderStatus(str, Enum):\n",
-    "    PLACED = \"PLACED\"\n",
-    "    OUT_FOR_DELIVERY = \"OUT_FOR_DELIVERY\"\n",
-    "    DELIVERED = \"DELIVERED\"\n",
-    "    CANCELED = \"CANCELED\"\n",
-    "\n",
-    "\n",
-    "class Order(BaseModel):\n",
-    "    \"\"\"Order details.\"\"\"\n",
-    "    id: int = Field(description=\"Order ID.\")\n",
-    "    name: str = Field(description=\"Ordered item's name.\")\n",
-    "    status: OrderStatus = Field(description=\"Order status.\")\n",
-    "    date: datetime = Field(description=\"Order date.\")\n",
-    "    current_location: str = Field(description=\"OUT_FOR_DELIVERY order's current location.\", default=\"\")\n",
-    "    delivery_eta: datetime = Field(description=\"OUT_FOR_DELIVERY order's delivery estimated time of arrival.\", default=\"\")\n",
-    "        \n",
-    "    class Config:\n",
-    "        @staticmethod\n",
-    "        def json_schema_extra(schema: Dict[str, Any]) -> None:\n",
-    "            schema.pop(\"required\", None)\n",
-    "            for name, prop in schema.get(\"properties\", {}).items():\n",
-    "                prop.pop(\"title\", None)\n",
-    "                if name == \"date\":\n",
-    "                    prop.pop(\"format\", None)\n",
-    "                elif name == \"status\":\n",
-    "                    prop.pop(\"allOf\", None)\n",
-    "                    prop[\"enum\"] = list(OrderStatus)\n",
-    "                    \n",
-    "    def csv(self):\n",
-    "        return f\"{self.id},{self.name},{self.status},{self.date},{self.current_location},{self.delivery_eta}\"\n",
-    "    \n",
-    "    @classmethod\n",
-    "    def csv_header(cls):\n",
-    "        return \",\".join(list(cls.model_fields.keys()))\n",
-    "\n",
-    "import json\n",
-    "# print(json.dumps(Order.model_json_schema(), indent=2))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "id": "26518a7f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "id,name,status,date,current_location,delivery_eta\n",
-      "124,Nike running shoes,OUT_FOR_DELIVERY,2023-09-11 00:00:00,Indiranagar,2023-09-13 00:00:00\n",
-      "123,Beige blanket,DELIVERED,2023-01-01 00:00:00,,\n",
-      "122,IKEA Table lamp,CANCELED,2022-02-28 00:00:00,,\n",
-      "121,Bullet proof socks,DELIVERED,2022-01-01 00:00:00,,\n",
-      "\n",
-      "id,name,status,date,current_location,delivery_eta\n",
-      "124,Nike running shoes,OUT_FOR_DELIVERY,2023-09-11 00:00:00,Indiranagar,2023-09-13 00:00:00\n"
-     ]
-    }
-   ],
-   "source": [
-    "class OrderAPI:\n",
-    "    def __init__(self):\n",
-    "        self.orders = [\n",
-    "            Order(id=124, name=\"Nike running shoes\", status=OrderStatus.OUT_FOR_DELIVERY, date=datetime.strptime(\"9/11/2023\", \"%m/%d/%Y\"), current_location=\"Indiranagar\", delivery_eta=datetime.strptime(\"9/13/2023\", \"%m/%d/%Y\")),\n",
-    "            Order(id=123, name=\"Beige blanket\", status=OrderStatus.DELIVERED, date=datetime.strptime(\"1/1/2023\", \"%m/%d/%Y\")),\n",
-    "            Order(id=122, name=\"IKEA Table lamp\", status=OrderStatus.CANCELED, date=datetime.strptime(\"2/28/2022\", \"%m/%d/%Y\")),\n",
-    "            Order(id=121, name=\"Bullet proof socks\", status=OrderStatus.DELIVERED, date=datetime.strptime(\"1/1/2022\", \"%m/%d/%Y\")),\n",
-    "        ]\n",
-    "        \n",
-    "    def list_orders(self, **kwargs):\n",
-    "        orders_csv = [Order.csv_header()]\n",
-    "        for order in self.orders:\n",
-    "            orders_csv.append(order.csv())\n",
-    "        return \"\\n\".join(orders_csv)\n",
-    "    \n",
-    "    def get_order_details(self, **kwargs):\n",
-    "        order_id = kwargs[\"order_id\"]\n",
-    "        order = [o for o in self.orders if o.id == order_id][0]\n",
-    "        return Order.csv_header() + \"\\n\" + order.csv()\n",
-    "\n",
-    "\n",
-    "order_api = OrderAPI()\n",
-    "print(order_api.list_orders())\n",
-    "print()\n",
-    "print(order_api.get_order_details(order_id=124))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c787c39e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Auto generate functions array from OrderAPI()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 148,
    "id": "d9e434c2",
    "metadata": {},
    "outputs": [],
@@ -437,18 +272,55 @@
     "        \"name\": response_message[\"function_call\"][\"name\"],\n",
     "        \"content\": \"List of 10 shoes with that description\",\n",
     "    })\n",
-    "\n",
-    "    \n",
     "    return chat_history"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ae1ab304",
+   "metadata": {},
+   "source": [
+    "### Scenario 1\n",
+    "\n",
+    "```\n",
+    "Customer: Where is my order? (without order_id)\n",
+    "Bot: Please let me know which order: (list of orders)\n",
+    "Customer: nike shoes one\n",
+    "Bot: Your order is at Indiranagar\n",
+    "Customer: Cancel my order\n",
+    "Bot: Are you sure you want to cancel Nike shoes order?\n",
+    "Customer: Yes\n",
+    "Bot: Your order of Nike shoes has been canceled.\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 150,
    "id": "05173b54",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Query: where is my order?\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_queries = [\n",
+    "    \"where is my order?\",\n",
+    "]\n",
+    "\n",
+    "chat_history = []\n",
+    "for query in user_queries:\n",
+    "    chat_history.append({\"role\": \"user\", \"content\": query})\n",
+    "    chat_history = simulate_conversation(chat_history)\n",
+    "    print(f\"Query: {query}\")\n",
+    "    print()\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -497,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f3b5ffac",
+   "id": "7ba53f26",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58ee0e1a",
+   "id": "007af6c3",
    "metadata": {},
    "outputs": [],
    "source": []
