add support for list+get orders

--- a/notebooks/functions.ipynb
+++ b/notebooks/functions.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "e95fa4cc",
    "metadata": {},
    "outputs": [],
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 51,
    "id": "56b17829",
    "metadata": {},
    "outputs": [],
@@ -226,51 +226,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 52,
    "id": "dad3ec1b",
    "metadata": {},
    "outputs": [],
    "source": [
     "system_prompt = \"\"\"You are an AI assistant for an ecommerce app helping customers with their queries about their orders.\n",
-    "If customer's query requires an order id but none is present in messages then list orders and ask them to select their order.\n",
+    "If customer's query requires an order id but none is present in previous messages then call list orders function and then ask them: \"Could you please tell me which order?\".\n",
     "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": null,
+   "id": "f12c3a36",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "id": "d9e434c2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def simulate_conversation(chat_history):\n",
+    "def add_to_chat_history(chat_history, message):\n",
+    "    content = message[\"content\"]\n",
+    "    if not content:\n",
+    "        function_call = message['function_call']\n",
+    "        content = f\"{function_call['name']}({function_call['arguments']})\"\n",
+    "    print(f\"{message['role']}: {content}\")\n",
+    "    chat_history.append(message)\n",
+    "    return chat_history\n",
+    "\n",
+    "def chat_completion(chat_history):\n",
     "    response = openai.ChatCompletion.create(\n",
     "        model=\"gpt-4\",\n",
     "        engine=\"gpt-4\",\n",
-    "        messages=[\n",
-    "            {\"role\": \"system\", \"content\": system_prompt},\n",
-    "            *chat_history,\n",
-    "        ],\n",
+    "        messages=[{\"role\": \"system\", \"content\": system_prompt}, *chat_history],\n",
     "        temperature=0,\n",
     "        functions=functions,\n",
     "    )\n",
-    "    response_message = response.choices[0].message\n",
-    "    if \"function_call\" in response_message:\n",
-    "        func = response_message[\"function_call\"][\"name\"]\n",
-    "        ar = json.loads(response_message[\"function_call\"][\"arguments\"])\n",
-    "    \n",
-    "    chat_history.append({\n",
-    "        \"role\": response_message[\"role\"],\n",
+    "    return response.choices[0].message\n",
+    "\n",
+    "def simulate_conversation(order_api, chat_history):\n",
+    "    response_message = chat_completion(chat_history)\n",
+    "    if \"function_call\" not in response_message:\n",
+    "        raise Exception(f\"invalid resp: {response_message}\")\n",
+    "    func_name = response_message[\"function_call\"][\"name\"]\n",
+    "    func_arguments = response_message[\"function_call\"][\"arguments\"]\n",
+    "\n",
+    "    chat_history = add_to_chat_history(chat_history, {\n",
+    "        \"role\": \"assistant\",\n",
     "        \"function_call\": {\n",
-    "            \"name\": response_message[\"function_call\"][\"name\"],\n",
-    "            \"arguments\": response_message[\"function_call\"][\"arguments\"],\n",
+    "            \"name\": func_name,\n",
+    "            \"arguments\": func_arguments,\n",
     "        },\n",
-    "        \"content\": None\n",
+    "        \"content\": None,\n",
     "    })\n",
-    "    chat_history.append({\n",
+    "\n",
+    "    func = getattr(functions_code.OrderAPI, func_name)\n",
+    "    func_output = func(order_api, **json.loads(func_arguments))\n",
+    "\n",
+    "    chat_history = add_to_chat_history(chat_history, {\n",
     "        \"role\": \"function\",\n",
-    "        \"name\": response_message[\"function_call\"][\"name\"],\n",
-    "        \"content\": \"List of 10 shoes with that description\",\n",
+    "        \"name\": func_name,\n",
+    "        \"content\": func_output.stringify(),\n",
+    "    })\n",
+    "    response_message = chat_completion(chat_history)\n",
+    "    chat_history = add_to_chat_history(chat_history, {\n",
+    "        \"role\": \"assistant\",\n",
+    "        \"content\": response_message[\"content\"],\n",
     "    })\n",
     "    return chat_history"
    ]
@@ -282,21 +309,21 @@
    "source": [
     "### Scenario 1\n",
     "\n",
-    "```\n",
-    "Customer: Where is my order? (without order_id)\n",
-    "Bot: Please let me know which order: (list of orders)\n",
-    "Customer: nike shoes one\n",
-    "Bot: Your order is at Indiranagar\n",
-    "Customer: Cancel my order\n",
-    "Bot: Are you sure you want to cancel Nike shoes order?\n",
-    "Customer: Yes\n",
-    "Bot: Your order of Nike shoes has been canceled.\n",
-    "```"
+    "- Customer: Where is my order? (without order_id)\n",
+    "- Bot: Please let me know which order: (list orders call)\n",
+    "- Customer: nike shoes one\n",
+    "- Bot: Your order is at Indiranagar (get order details call)\n",
+    "- Customer: Cancel my order\n",
+    "- Bot: Are you sure you want to cancel Nike shoes order? (confirmation before any state-changing action)\n",
+    "  - Customer: Yes\n",
+    "    - Bot: Your order of Nike shoes has been canceled.\n",
+    "  - Customer: No\n",
+    "    - Bot: Your order of Nike shoes will not be canceled."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 54,
    "id": "05173b54",
    "metadata": {},
    "outputs": [
@@ -304,22 +331,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Query: where is my order?\n",
-      "\n"
+      "user: where is my order?\n",
+      "assistant: list_orders({})\n",
+      "function: id,item_name,status,order_date\n",
+      "124,Nike running shoes,OUT_FOR_DELIVERY,2023-09-11 00:00:00\n",
+      "123,Beige blanket,DELIVERED,2023-01-01 00:00:00\n",
+      "122,IKEA Table lamp,CANCELED,2022-02-28 00:00:00\n",
+      "121,Shampoo,DELIVERED,2022-01-01 00:00:00\n",
+      "assistant: Here are your recent orders:\n",
+      "\n",
+      "1. Order ID: 124, Item: Nike running shoes, Status: Out for delivery, Order Date: 2023-09-11\n",
+      "2. Order ID: 123, Item: Beige blanket, Status: Delivered, Order Date: 2023-01-01\n",
+      "3. Order ID: 122, Item: IKEA Table lamp, Status: Canceled, Order Date: 2022-02-28\n",
+      "4. Order ID: 121, Item: Shampoo, Status: Delivered, Order Date: 2022-01-01\n",
+      "\n",
+      "Could you please tell me which order you are asking about?\n",
+      "user: nike shoes one\n",
+      "assistant: get_order_details({\n",
+      "  \"order_id\": 124\n",
+      "})\n",
+      "function: id,item_name,status,order_date,current_location,delivery_eta\n",
+      "124,Nike running shoes,OUT_FOR_DELIVERY,2023-09-11 00:00:00,Indiranagar,2023-09-13 00:00:00\n",
+      "assistant: Your order for Nike running shoes (Order ID: 124) is currently out for delivery. It is currently in Indiranagar and the estimated delivery date is on 2023-09-13.\n"
      ]
     }
    ],
    "source": [
-    "user_queries = [\n",
+    "user_inputs = [\n",
     "    \"where is my order?\",\n",
+    "    \"nike shoes one\",\n",
+    "#     \"cancel my order\",\n",
+    "#     \"yes\",\n",
     "]\n",
     "\n",
     "chat_history = []\n",
-    "for query in user_queries:\n",
-    "    chat_history.append({\"role\": \"user\", \"content\": query})\n",
-    "    chat_history = simulate_conversation(chat_history)\n",
-    "    print(f\"Query: {query}\")\n",
-    "    print()\n"
+    "for inp in user_inputs:\n",
+    "    chat_history = add_to_chat_history(chat_history, {\"role\": \"user\", \"content\": inp})\n",
+    "    chat_history = simulate_conversation(order_api, chat_history)"
    ]
   },
   {
